<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.etsisi.appquitectura.R" />

        <variable
            name="viewModel"
            type="com.etsisi.appquitectura.presentation.ui.login.viewmodel.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraints_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/dimen_12">

        <ScrollView
            android:id="@+id/scrollViewContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:isScrollContainer="true"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/register_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="@dimen/dimen_32"
                    android:text="@string/register_title"
                    android:textSize="@dimen/text_22" />

                <TextView
                    style="@style/TextAppearance.App.BodyMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:dynamicRes="@{R.string.register_greeting}"
                    app:dynamicText="@{viewModel.name}"
                    app:isVisible="@{!viewModel.name.empty}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/name_layout"
                        android:layout_width="@dimen/dimen_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/name"
                        app:errorEnabled="true"
                        android:imeOptions="actionNext">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:text="@={viewModel.name}" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/surname_layout"
                        android:layout_width="@dimen/dimen_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/surname"
                        android:imeOptions="actionNext">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:text="@={viewModel.surname}" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_3"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/academic_record_layout"
                        android:layout_width="@dimen/dimen_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/number_academic_record"
                        android:imeOptions="actionNext">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1"
                            android:text="@={viewModel.academicRecord}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/academic_group_layout"
                        android:layout_width="@dimen/dimen_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/group"
                        android:imeOptions="actionNext">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1"
                            android:text="@={viewModel.academicGroup}" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/age_layout"
                        android:layout_width="@dimen/dimen_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/age">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_age"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:cursorVisible="false"
                            android:clickable="true"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:inputType="date"
                            android:text="@{viewModel.age}" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/city_layout"
                        android:layout_width="@dimen/dimen_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/city"
                        android:imeOptions="actionNext">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            android:maxLines="1"
                            android:text="@={viewModel.city}" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen_10"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextAppearance.App.BodyMedium"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="@dimen/dimen_4"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/course" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                            android:layout_width="@dimen/dimen_0"
                            android:layout_height="wrap_content"
                            android:layout_weight="2">

                            <AutoCompleteTextView
                                android:id="@+id/course_spinner_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="none" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen_10"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/TextAppearance.App.BodyMedium"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="@dimen/dimen_4"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="@string/gender" />
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/genre_spinner"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        android:layout_width="@dimen/dimen_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="2">

                        <AutoCompleteTextView
                            android:id="@+id/gender_spinner_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <include
                    android:id="@+id/form"
                    layout="@layout/login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/dimen_10"
                    app:viewModel="@{viewModel}" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    app:isVisible="@{viewModel.email != null &amp;&amp; !viewModel.email.empty}"
                    android:text="@string/register_need_verification_msg" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_register"
                    style="@style/buttonStyle"
                    android:layout_margin="@dimen/dimen_40"
                    android:onClick="@{() -> viewModel.initRegister()}"
                    android:text="@string/register_btn_text" />
            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>