<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.etsisi.appquitectura.presentation.ui.main.profile.viewmodel.MyProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="@dimen/dimen_150"
            android:layout_height="@dimen/dimen_0"
            android:layout_marginTop="@dimen/dimen_15"
            android:src="@drawable/user"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_150"
            android:src="@drawable/play_background_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            style="@style/gameTitleStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen_15"
            android:layout_marginHorizontal="@dimen/dimen_6"
            android:orientation="vertical"
            android:divider="@drawable/divider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgProfile">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5"
                android:orientation="horizontal">

                <TextView
                    style="@style/gameBodyStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Nombre"
                    android:textSize="@dimen/text_20" />

                <TextView
                    style="@style/gameBodyStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@{viewModel.currentUser.name}"
                    android:textSize="@dimen/text_20" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5"
                android:orientation="horizontal">

                <TextView
                    style="@style/gameBodyStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Correo"
                    android:textSize="@dimen/text_20" />

                <TextView
                    style="@style/gameBodyStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@{viewModel.currentUser.email}"
                    android:textSize="@dimen/text_20" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/experienceContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5"
                android:orientation="horizontal">

                <TextView
                    style="@style/gameBodyStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/profile_experience"
                    android:textSize="@dimen/text_20" />

                <TextView
                    android:id="@+id/experience"
                    style="@style/gameBodyStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@{@string/roulette_item_exp(viewModel.currentUser.gameExperience)}"
                    android:textSize="@dimen/text_20" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/userLevelContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_5"
                android:orientation="horizontal">

                <TextView
                    style="@style/gameBodyStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/profile_level"
                    android:textSize="@dimen/text_20" />

                <TextView
                    android:id="@+id/userLevel"
                    style="@style/gameBodyStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical"
                    android:text="@{viewModel.userLevel.value}"
                    android:textSize="@dimen/text_20" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>